--- a/web/react-admin/index.html
+++ b/web/react-admin/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="apple-touch-icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LLM Proxy Admin</title>
+    <title>HEN Admin</title>
   </head>
   <body>
     <div id="root"></div>
