--- a/web/svelte-admin/src/app.html
+++ b/web/svelte-admin/src/app.html
@@ -7,6 +7,9 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="apple-touch-icon" href="/logo.png" />
+		<link rel="preconnect" href="https://fonts.googleapis.cn" />
+		<link rel="preconnect" href="https://fonts.gstatic.cn" crossorigin />
+		<link href="https://fonts.googleapis.cn/css2?family=Noto+Serif+SC:wght@400;700&family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Share+Tech+Mono&display=swap" rel="stylesheet" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
